# hs-uc

./: .travis.yml  LICENSE  hs-uc.cabal
src/Language/SIMPLE/: AbstractSyntax.hs  Environment.hs  PrettyPrint.hs  TransitionSemantics.hs
test/: SIMPLESpec.hs  doctests.hs
