name:                hs-uc
version:             0.0.0
synopsis:            Haskell code version for "Understanding Computation"
description:         Haskell code version for "Understanding Computation"
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:     
  other-modules:       
  other-extensions:
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src/
  default-language:    Haskell2010

