name:                hs-uc
version:             0.0.0
synopsis:            Haskell code version for "Understanding Computation"
description:         Haskell code version for "Understanding Computation"
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.SIMPLE.AbstractSyntax
                       ,Language.SIMPLE.Environment
                       ,Language.SIMPLE.PrettyPrint
                       ,Language.SIMPLE.TransitionSemantics
  build-depends:       base >=4.7 && <5
                       ,containers
                       ,pretty
  hs-source-dirs:      src/
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <5
                       ,containers
                       ,pretty
                       ,doctest >= 0.9.3
  hs-source-dirs:      test
  main-is:             doctests.hs
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <5
                       ,containers
                       ,pretty
                       ,hspec >=1.3
                       ,QuickCheck
                       ,hs-uc
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SIMPLESpec
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/nobsun/hs-uc
